# TimeForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_analytics.py  test_report.py  test_storage.py  test_timeforge.py  test_tracker.py
timeforge/: __init__.py  __main__.py  cli.py  core.py  display.py  sound.py  stats.py  timer.py
timeforge/core/: __init__.py  models.py  storage.py  tracker.py
timeforge/features/: __init__.py  analytics.py  gitlink.py  pomodoro.py  report.py
timeforge/utils/: __init__.py  config.py  display.py
